--- a/public/assets/bootstrap.css
+++ b/public/assets/bootstrap.css
@@ -30,8 +30,8 @@
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
 
-  --bs-primary: #0d6efd;
-  --bs-secondary: #6c757d;
+  --bs-primary: #ffffff;
+  --bs-secondary: #2C8F93;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
@@ -98,7 +98,7 @@ body {
   line-height: var(--bs-body-line-height);
   color: var(--bs-body-color);
   text-align: var(--bs-body-text-align);
-  background-color: var(--bs-body-bg);
+  background-color: var(--bs-primary);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
